group 'nyal'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'idea'


sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.apache.spark:spark-sql_2.11:2.4.3'
    compile 'org.apache.spark:spark-core_2.11:2.4.3'
    compile group: 'com.datastax.spark', name: 'spark-cassandra-connector_2.11', version: '2.4.1'
    compileOnly 'org.projectlombok:lombok:1.18.10'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
